I have updated the header Adeola.

--- a/index.html
+++ b/index.html
@@ -16,22 +16,25 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="forms.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <!-- Header Section Starts Here-->
-      <nav>
-        <div class="logo">
-          <a href="#"><img src="images/logo.svg" alt="Omio Africa Logo" /></a>
-        </div>
+      <header>
+        <nav>
+          <div class="logo">
+            <a href="#"><img src="images/logo.svg" alt="Omio Africa Logo" /></a>
+          </div>
 
-        <ul>
-          <li><a href="#" class="btn-dark">User</a></li>
-          <li><a href="#">Business</a></li>
-          <li><a href="#">Donate</a></li>
-        </ul>
-      </nav>
+          <ul>
+            <li><a href="#" class="btn-dark">User</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">Donate</a></li>
+          </ul>
+        </nav>
+      </header>
       <!-- Header Ends Here -->
 
       <main>
@@ -41,14 +44,19 @@
       </main>
 
       <!-- Footer Starts Here -->
+
       <div id="footer">
-        <a href="#" class="social-icons"><img src="images/instagram.svg" alt="omio facebook" />
+        <a href="#" class="social-icons"
+          ><img src="images/instagram.svg" alt="omio facebook" />
         </a>
-        <a href="#" class="social-icons"><img src="images/Social Network (1).svg" alt="omio facebook" />
+        <a href="#" class="social-icons"
+          ><img src="images/Social Network (1).svg" alt="omio facebook" />
         </a>
-        <a href="#" class="social-icons"><img src="images/Social Network (2).svg" alt="omio facebook" />
+        <a href="#" class="social-icons"
+          ><img src="images/Social Network (2).svg" alt="omio facebook" />
         </a>
-        <a href="#" class="social-icons"><img src="images/Social Network (3).svg" alt="omio facebook" />
+        <a href="#" class="social-icons"
+          ><img src="images/Social Network (3).svg" alt="omio facebook" />
         </a>
         <div class="footer-nav-links">
           <a href="#" class="nav-links">Business</a>
@@ -57,9 +65,13 @@
           <a href="#" class="nav-links">About Us</a>
           <a href="#" class="nav-links">Contact Us</a>
         </div>
-          <a href="#">
-            <img class="footer-image" src="images/Asset 5.svg" alt="Omio Africa Logo">
-          </a>
+        <a href="#">
+          <img
+            class="footer-image"
+            src="images/Asset 5.svg"
+            alt="Omio Africa Logo"
+          />
+        </a>
       </div>
     </div>
 
