Added header and footer

--- a/src/html/input_details.html
+++ b/src/html/input_details.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
-    <header></header>
+     <!-- Header starts here -->
+     <header>
+        <div class="logo">
+            <img src="/src/assets/logo.svg" alt="Omio Africa logo">
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search Products">
+            <div class="search-icon"><img src="/src/assets/mingcute_search-line.svg" alt="search-icon"></div>
+        </div>
+
+        <div class="links">
+            <a href="#"><span class="cart-icon"><img src="/src/assets/carbon_help.svg" alt=""></span>Help<img
+                    src="/src/assets/Group 30.svg" alt=""></span></a>
+        </div>
+    </header>
+
+    <!-- Header Ends Here -->
     <main>
         <section>
             <!-- title -->
