--- a/src/html/Product_upload.html
+++ b/src/html/Product_upload.html
@@ -9,8 +9,28 @@
 </head>
 
 <body>
-    <header>
+     <!-- Header starts here -->
+     <header>
+        <div class="hamburger">
+            <img src="/src/assets/Group.png" alt="Hamburger">
+        </div>
+        <div class="logo">
+            <img src="/src/assets/logo.svg" alt="Omio Africa logo">
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search Products">
+            <div class="search-icon"><img src="/src/assets/mingcute_search-line.svg" alt="search-icon"></div>
+        </div>
+
+        <div class="links">
+            <a href="#"><span class="cart-icon"><img src="/src/assets/Group 28.svg" alt=""></span>Hi, NGFA<img
+                    src="/src/assets/Group 30.svg" alt=""></span></a>
+            <a href="#"><span class="cart-icon"><img src="/src/assets/carbon_help.svg" alt=""></span>Help<img
+                    src="/src/assets/Group 30.svg" alt=""></span></a>
+        </div>
     </header>
+
+    <!-- Header Ends Here -->
     <main>
         <!-- add product -->
         <section class="store">
