--- a/src/html/product_page.html
+++ b/src/html/product_page.html
@@ -9,7 +9,29 @@
 </head>
 
 <body>
-    <header></header>
+    <!-- Header starts here -->
+    <header>
+        <div class="hamburger">
+            <img src="/src/assets/Group.png" alt="Hamburger">
+        </div>
+        <div class="logo">
+            <img src="/src/assets/logo.svg" alt="Omio Africa logo">
+        </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Search Products">
+            <div class="search-icon"><img src="/src/assets/mingcute_search-line.svg" alt="search-icon"></div>
+        </div>
+
+        <div class="links">
+            <a href="#"><span class="cart-icon"><img src="/src/assets/Group 28.svg" alt=""></span>Hi, Dalitiny<img
+                    src="/src/assets/Group 30.svg" alt=""></span></a>
+            <a href="#"><span class="cart-icon"><img src="/src/assets/carbon_help.svg" alt=""></span>Help<img
+                    src="/src/assets/Group 30.svg" alt=""></span></a>
+            <a href="#"><span class="cart-icon"><img src="/src/assets/Group 34.svg" alt=""></span></a>
+        </div>
+    </header>
+
+    <!-- Header Ends Here -->
     <main>
         <!-- List of pages shown at the top of the page -->
         <!-- <div class="pages" >
@@ -196,7 +218,27 @@
         </section>
     </main>
     <footer>
-
+        <div id="footer">
+            <a href="#" class="social-icons"><img src="/src/assets/instagram.svg" alt="omio facebook" />
+            </a>
+            <a href="#" class="social-icons"><img src="/src/assets/Social Network (1).svg" alt="omio facebook" />
+            </a>
+            <a href="#" class="social-icons"><img src="/src/assets/Social Network (2).svg" alt="omio github" />
+            </a>
+            <a href="#" class="social-icons"><img src="/src/assets/Social Network (3).svg" alt="omio telegram" />
+            </a>
+            <div class="footer-nav-links">
+                <a href="#" class="nav-links">Business</a>
+                <a href="#" class="nav-links">Donate</a>
+                <a href="#" class="nav-links">Users</a>
+                <a href="#" class="nav-links">About Us</a>
+                <a href="#" class="nav-links">Contact Us</a>
+            </div>
+            <a href="#">
+                <img class="footer-image" src="/src/assets/Asset 5.svg" alt="Omio Africa Logo">
+            </a>
+        </div>
+        </div>
     </footer>
 </body>
 
