--- a/src/html/your_shelf.html
+++ b/src/html/your_shelf.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-     <!-- Header starts here -->
+    <!-- Header starts here -->
     <header>
         <div class="hamburger">
             <img src="/src/assets/Group.png" alt="Hamburger">
@@ -129,6 +129,8 @@
             <p class="expiry_days_title" id="five_days">
                 Expires in 5 Days
             </p>
+
+            <!-- Grid 1 -->
             <div class="expiry_days_grid">
                 <div class="expiry_days" id="five_days_1">
                     <div class="boxes">
@@ -163,6 +165,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 2 -->
                 <div class="expiry_days" id="five_days_2">
                     <div class="boxes">
                         <div class="box_image">
@@ -196,6 +200,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 3 -->
                 <div class="expiry_days" id="five_days_3">
                     <div class="boxes">
                         <div class="box_image">
@@ -229,6 +235,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 4 -->
                 <div class="expiry_days" id="five_days_4">
                     <div class="boxes">
                         <div class="box_image">
@@ -263,6 +271,8 @@
                     </div>
 
                 </div>
+
+                <!-- Grid 5 -->
                 <div class="expiry_days" id="five_days_5">
                     <div class="boxes">
                         <div class="box_image">
@@ -296,6 +306,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 6 -->
                 <div class="expiry_days" id="five_days_6">
                     <div class="boxes">
                         <div class="box_image">
@@ -337,6 +349,8 @@
             <p class="expiry_days_title" id="ten_days">
                 Expires in 10 Days
             </p>
+
+            <!-- Grid 1 -->
             <div class="expiry_days_grid">
                 <div class="expiry_days" id="ten_days_1">
                     <div class="boxes">
@@ -371,6 +385,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 2 -->
                 <div class="expiry_days" id="ten_days_2">
                     <div class="boxes">
                         <div class="box_image">
@@ -404,6 +420,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 3 -->
                 <div class="expiry_days" id="ten_days_3">
                     <div class="boxes">
                         <div class="box_image">
@@ -437,6 +455,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 4 -->
                 <div class="expiry_days" id="ten_days_4">
                     <div class="boxes">
                         <div class="box_image">
@@ -471,6 +491,8 @@
                     </div>
 
                 </div>
+
+                <!-- Grid 5 -->
                 <div class="expiry_days" id="ten_days_5">
                     <div class="boxes">
                         <div class="box_image">
@@ -504,6 +526,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 6 -->
                 <div class="expiry_days" id="ten_days_6">
                     <div class="boxes">
                         <div class="box_image">
@@ -545,6 +569,9 @@
             <p class="expiry_days_title" id="fifteen_days">
                 Expires in 15 Days
             </p>
+
+
+            <!-- Grid 1 -->
             <div class="expiry_days_grid">
                 <div class="expiry_days" id="fifteen_days_1">
                     <div class="boxes">
@@ -579,6 +606,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 2 -->
                 <div class="expiry_days" id="fifteen_days_2">
                     <div class="boxes">
                         <div class="box_image">
@@ -612,6 +641,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 3 -->
                 <div class="expiry_days" id="fifteen_days_3">
                     <div class="boxes">
                         <div class="box_image">
@@ -645,6 +676,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 4 -->
                 <div class="expiry_days" id="fifteen_days_4">
                     <div class="boxes">
                         <div class="box_image">
@@ -679,6 +712,8 @@
                     </div>
 
                 </div>
+
+                <!-- Grid 5 -->
                 <div class="expiry_days" id="fifteen_days_5">
                     <div class="boxes">
                         <div class="box_image">
@@ -712,6 +747,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Grid 6 -->
                 <div class="expiry_days" id="fifteen_days_6">
                     <div class="boxes">
                         <div class="box_image">
@@ -748,6 +785,7 @@
             </div>
         </section>
     </main>
+    <!-- footer starts here -->
     <footer>
         <div id="footer">
             <a href="#" class="social-icons"><img src="/src/assets/instagram.svg" alt="omio facebook" />
