--- a/src/html/input_card_details.html
+++ b/src/html/input_card_details.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, old-scale=1.0">
     <title>Input details</title>
-    <link rel="stylesheet" href="/src/css/input_details.css">
+    <link rel="stylesheet" href="/src/css/input_card_details.css">
 </head>
 
 <body>
-     <!-- Header starts here -->
-     <header>
+    <!-- Header starts here -->
+    <header>
         <div class="logo">
             <img src="/src/assets/logo.svg" alt="Omio Africa logo">
         </div>
