Edited the dashboard

--- a/src/html/donor_dashboard.html
+++ b/src/html/donor_dashboard.html
@@ -76,8 +76,8 @@
     
         <!-- profile image -->
         <section class="profile_image">
-            <img src="/src/assets/Ellipse.svg" alt="">
-            <img src="/src/assets/profile_picture.png" alt="">
+            <img class="eclipse" src="/src/assets/Ellipse.svg" alt="">
+            <img class="profile_image" src="/src/assets/profile_picture.png" alt="">
         </section>
 
         <!-- Personal information -->
@@ -91,25 +91,25 @@
                         Input personal details below
                     </p>
                 </div>
-                <div class="grid">
-                    <div class="grid_">
-                        <label for="first_name">First Name</label>
+                <div class="the_grid">
+                    <div class="grid">
+                        <label for="first_name">First Name*</label>
                         <input type="text" name="first_name" id="first_name" placeholder="input first name" required>
                     </div>
-                    <div class="grid_">
-                        <label for="last_name">Last Name</label>
+                    <div class="grid">
+                        <label for="last_name">Last Name*</label>
                         <input type="text" name="last_name" id="last_name" placeholder="input last name" required>
                     </div>
-                    <div class="grid_">
-                        <label for="email_address">Email Address</label>
-                        <input type="text" name="email_address" id="email_address" placeholder="input email address" required>
+                    <div class="grid">
+                        <label for="email_address">Email Address*</label>
+                        <input type="text" name="email_address" id="email_address" placeholder="input Email address" required>
                     </div>
-                    <div class="grid_">
-                        <label for="address">Address</label>
+                    <div class="grid">
+                        <label for="address">Address*</label>
                         <input type="text" name="address" id="address" placeholder="input address" required>
                     </div>
-                    <div class="grid_">
-                        <label for="tax_id">Home Tax ID</label>
+                    <div class="grid">
+                        <label for="tax_id">Home Tax ID*</label>
                         <input type="text" name="tax_id" id="tax_id" placeholder="input home tax ID" required>
                     </div>
                 </div>
