added new page namely: business dashboard

--- a/src/html/user_sign_in_email .html
+++ b/src/html/user_sign_in_email .html
@@ -14,7 +14,7 @@
                 Sign in
             </p>
             <p class="subtitle">
-                to monitor your donation
+                to continue to OMIO Africa 
             </p>
         </div>
         <!-- sign in with google -->
