--- a/src/html/user_sign_password.html
+++ b/src/html/user_sign_password.html
@@ -14,7 +14,7 @@
                 Enter your password
             </p>
             <p class="subtitle">
-                to monitor your donation
+                to continue to OMIO Africa
             </p>
         </div>
         
