--- a/src/html/donor_dashboard.html
+++ b/src/html/donor_dashboard.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="grid">
                         <label for="email_address">Email Address*</label>
-                        <input type="text" name="email_address" id="email_address" placeholder="input Email address" required>
+                        <input type="email" name="email_address" id="email_address" placeholder="input Email address" required>
                     </div>
                     <div class="grid">
                         <label for="address">Address*</label>
