--- a/src/html/user_sign_up.html
+++ b/src/html/user_sign_up.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donor Sign Up</title>
+    <title>User Sign Up</title>
     <link rel="stylesheet" href="/src/css/user_sign_up.css">
 </head>
 <body>
