--- a/src/html/business_dashboard.html
+++ b/src/html/business_dashboard.html
@@ -91,40 +91,59 @@
     </section>
     
        <section class="main_section">
+
         <!-- information cards-->
             <section class="information_cards">
-                <div class="shop_information">
-                    <img src="/src/assets/shop_information.svg" alt="">
+                <div class="information">
+                   <div class="information_icon">
+                    <img src="/src/assets/shop_information.svg" alt="" class="ellipse_icon">
+                    <img src="/src/assets/Ellipse 5 (1).svg" alt="" class="ellipse">
+                   </div>
                     <p class="card_title">Shop <p>Information</p></p>
                     <img src="/src/assets/Line 22.svg" alt="" class="divider">
                     <div class="pending">
                         <img src="/src/assets/pending.svg" alt="">
-                        <p> Pending </p>
+                        <p> PENDING </p>
                     </div>
-                    <div class="business_information">
-                        <img src="/src/assets/business.svg" alt="">
-                        <p class="card_title">Business <p>Information</p></p>
-                        <img src="/src/assets/Line 22.svg" alt="" class="divider">
-                        <div class="pending">
-                            <img src="/src/assets/pending.svg" alt="">
-                            <p> Pending </p>
-                        </div>
-                        <div class="shop_information">
-                            <img src="/src/assets/shop_information.svg" alt="">
-                            <p class="card_title">Shop <p>Information</p></p>
-                            <img src="/src/assets/Line 22.svg" alt="" class="divider">
-                            <div class="pending">
-                                <img src="/src/assets/pending.svg" alt="">
-                                <p> Pending </p>
-                            </div>
-                            <div class="shop_information">
-                                <img src="/src/assets/shop_information.svg" alt="">
-                                <p class="card_title">Shop <p>Information</p></p>
-                                <img src="/src/assets/Line 22.svg" alt="" class="divider">
-                                <div class="pending">
-                                    <img src="/src/assets/pending.svg" alt="">
-                                    <p> Pending </p>
-                                </div>
+                </div>
+
+                <div class="information">
+                    <div class="information_icon">
+                        <img src="/src/assets/business_information.svg" alt=""class="ellipse_icon">
+                        <img src="/src/assets/Ellipse 5 (1).svg" alt="" class="ellipse">
+                    </div>
+                    <p class="card_title">Business <p>Information</p></p>
+                    <img src="/src/assets/Line 22.svg" alt="" class="divider">
+                    <div class="pending">
+                        <img src="/src/assets/pending.svg" alt="">
+                        <p> PENDING </p>
+                    </div>
+                </div>
+                
+                <div class="information">
+                    <div class="information_icon">
+                        <img src="/src/assets/payment_information.svg" alt="" class="ellipse_icon">
+                        <img src="/src/assets/Ellipse 5 (1).svg" alt="" class="ellipse">
+                       </div>
+                    <p class="card_title">Payment <p>Information</p></p>
+                    <img src="/src/assets/Line 22.svg" alt="" class="divider">
+                    <div class="pending">
+                        <img src="/src/assets/pending.svg" alt="">
+                        <p> PENDING </p>
+                    </div>
+                </div>
+
+                <div class="information">
+                    <div class="information_icon">
+                        <img src="/src/assets/shipping_information.svg" alt="" class="ellipse_icon">
+                        <img src="/src/assets/Ellipse 5 (1).svg" alt="" class="ellipse">
+                       </div>
+                    <p class="card_title">Shipping <p>Information</p></p>
+                    <img src="/src/assets/Line 22.svg" alt="" class="divider">
+                    <div class="pending">
+                        <img src="/src/assets/pending.svg" alt="">
+                        <p> PENDING </p>
+                    </div>
                 </div>
             </section>
 
