--- a/src/html/donor_sign_in_email.html
+++ b/src/html/donor_sign_in_email.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donor Sign In Email</title>
     <link rel="stylesheet" href="/src/css/donor_sign_in_email.css">
 </head>
+
 <body>
     <main>
         <!-- title -->
@@ -19,7 +21,9 @@
         </div>
         <!-- sign in with google -->
         <div>
-            <button class="google"><img src="/src/assets/Google logo.svg" alt=""> <p>Continue with Google</p></button>
+            <button class="google"><img src="/src/assets/Google logo.svg" alt="">
+                <p>Continue with Google</p>
+            </button>
         </div>
         <!-- divider -->
         <div class="divider">
@@ -32,9 +36,9 @@
         <div class="enter_email">
             <div class="email">
                 <label for="email_address">Email address</label>
-                <input type="email" name="email_address" id="email_address"  placeholder="Enter your email address">
+                <input type="email" name="email_address" id="email_address" placeholder="Enter your email address">
             </div>
-    
+
             <!-- button -->
             <div class="continue">
                 <button>Continue</button>
@@ -47,6 +51,7 @@
             <p class="sign_up_text"> Sign Up</p>
         </div>
     </main>
-    
+
 </body>
+
 </html>
